# camera_vision

./: .gitignore  README.md  pyproject.toml
arduino/: gesture_control.ino  led_control.ino
config/: settings.json
src/: main.py
